[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "intelligent-cloud-load-balancer"
version = "1.0.0"
description = "OpenEnv-compatible Intelligent Cloud Load Balancer environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "numpy",
    "openai",
    "pyyaml",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[tool.setuptools.packages.find]
where = ["."]
